layout bug fixed

--- a/client/src/sass/pages/_calculator.scss
+++ b/client/src/sass/pages/_calculator.scss
@@ -6,7 +6,6 @@
 
 #calculator {
 	font-family: 'Poppins', sans-serif;
-	padding: 30px 0;
 	#board {
 		background-color: #1C1C1C;
 		width: 320px;
