--- a/client/src/sass/pages/_markDownPreviewer.scss
+++ b/client/src/sass/pages/_markDownPreviewer.scss
@@ -1,8 +1,7 @@
 @import "../abstracts/function";
 
 #markDownPreviewer {
-    padding: px-to-em(40px) px-to-em(23px) 0 px-to-em(23px);
-
+    // padding: px-to-em(70px) px-to-em(23px) 0 px-to-em(23px);
     #inputField {
         // background-color: red;
 
